[omnibox] Swap Calculator terms in URL to search correctly

The current URL generated from a Calculator suggestion searches for
the result e.g. "4", not the calculation e.g. "2+2". This CL swaps
the terms (actually, it clears the original query) and, further, treats
the suggestions as distinct from non-calculator suggestions, so that
they don't dupe against other WYT suggestions.

Bug: 873666
Change-Id: I006f9754ee7e48d0a21a1f149c4ef76b3ca509fd
Reviewed-on: https://chromium-review.googlesource.com/1197342
Commit-Queue: Kevin Bailey <krb@chromium.org>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589228}
Former-commit-id: cbe8e92f21c2ac2cea90badf3362f94e84d60d02